--- a/Cognodata_examen_Python_enunciado.ipynb
+++ b/Cognodata_examen_Python_enunciado.ipynb
@@ -34,7 +34,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "matriz=[]\n",
+    "filas = int(input(\"Introduce numero de filas: \"))\n",
+    "columnas= int(input(\"Introduce numero de columnas: \"))   \n",
+    "for i in range(filas):\n",
+    "    for j in range(columnas):\n",
+    "        matriz.append([0]*columnas)\n",
+    "    \n",
+    "for i in range(filas):\n",
+    "    for j in range(columnas):\n",
+    "        matriz[i][j]= round(random.uniform(1,100),2)\n",
+    "    \n",
+    "for i in range(filas):\n",
+    "    for j in range(columnas):\n",
+    "        print(matriz[i][j],end=\"\\t\")\n",
+    "    print('\\n')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -49,7 +66,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "import pandas as pd\n",
+    "import numpy as nd\n",
+    "matriz=[]\n",
+    "filas = 10\n",
+    "columnas= 7   \n",
+    "    \n",
+    "for i in range(filas):\n",
+    "    matriz.append([0]*columnas)\n",
+    "    for j in range(columnas):\n",
+    "        matriz[i][j]= round(random.uniform(1,100),2)\n",
+    "\n",
+    "dias=['lunes','martes','miercoles','jueves','viernes','sabado','domingo']\n",
+    "df= pd.DataFrame(data=matriz, columns=dias)\n",
+    "print(matriz)\n",
+    "print(df)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,7 +99,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "vector=[]\n",
+    "for j in range(10):\n",
+    "        vector.append([0]*10)\n",
+    "        vector[j]= round(random.uniform(1,100),2)\n",
+    "numeros=np.array(vector)\n",
+    "caracter=str(numeros)\n",
+    "estructura=[numeros,caracter]\n",
+    "print(estructura)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,7 +125,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "vector=[]\n",
+    "normalizado=[]\n",
+    "for j in range(10):\n",
+    "        vector.append([0]*10)\n",
+    "        vector[j]= round(random.uniform(1,100),2)\n",
+    "numeros=np.array(vector)\n",
+    "media=np.mean(numeros)\n",
+    "desviacion=np.std(numeros)\n",
+    "caracter=str(numeros)\n",
+    "\n",
+    "for j in range(10):\n",
+    "        normalizado.append([0]*10)\n",
+    "        normalizado[j]= (vector[j]-media)/desviacion\n",
+    "estructura=[numeros,caracter]\n",
+    "print(numeros,normalizado)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,7 +158,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "from numpy.core.numeric import normalize_axis_tuple\n",
+    "vector=[]\n",
+    "normal=[]\n",
+    "for j in range(10):\n",
+    "        vector.append([0]*10)\n",
+    "        vector[j]= round(random.uniform(1,100),2)\n",
+    "numeros=np.array(vector)\n",
+    "media=np.mean(numeros)\n",
+    "desviacion=np.std(numeros)\n",
+    "caracter=str(numeros)\n",
+    "\n",
+    "for j in range(10):\n",
+    "        normal.append([0]*10)\n",
+    "        normal[j]= (vector[j]-media)/desviacion\n",
+    "normalizado=np.array(normal)\n",
+    "print(numeros,normalizado)\n",
+    "selecval=normalizado[np.where((normalizado <= 1) & (normalizado >= -1))]\n",
+    "estructura=[numeros,caracter]\n",
+    "print(sorted(selecval))"
+   ]
   },
   {
    "cell_type": "markdown",
